2011-07-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	More diffs between TeX Live and W32TeX.
	* knj.[ch]: New files from Akira's W32TeX.
	* progname.c (kpathsea_set_program_name): Set is_cp932_system.
	* Makefile.am, config.h: Adapt.

	* db.c, expand.c, hash, path-elt.c, tilde.c, truncate.c,
	variable.c, xdirname.c, xgetcwd.c:
	Test for 2-Byte Kanji (CP 932, SJIS) codes.

	* db.c (kpathsea_db_search, kpathsea_db_search_list),
	tex-file.c (kpathsea_set_suffixes_va_list, init_maketex):
	Cast arg to `void *' because MSVC warns for a `const_string *'
	arg when expecting `void *'.

	* config.h, db.c, hash.c: #define and use TRANSFORM.

2011-07-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Minor changes to reduce diffs between TeX Live and W32TeX.
	* c-ctype.h [WIN32]: Never #define isascii.
	* c-fopen.h: Always write text files with Unix line endings.
	* tex-glyph.c (bitmap_specs) [WIN32]: Add DOS_BITMAP_SPEC.
	* win32lib.h: #define strncasecmp as _strnicmp.
	* readable.c: Replace #elif WIN32 => #elif defined (WIN32).
	* magstep.c, pathsearch.h, xftell.c: Adjust whitespace.

2011-07-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpathsea.c, progname.c, tex-file.c, types.h:
	Drop #if defined(__MINGW32__) already implied by defined(WIN32).

	* kpathsea.c (kpathsea_finish): Free suffixlist.

2011-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* version.ac: New file defining the kpathsea version.
	Update version number 6.0.1 => 6.0.2dev.
	* configure.ac: Adapt. Use KPSE_LT_VERSION.

2011-07-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ac/web2c.ac renamed into ac/mktex.ac.
	* ac/withenable.ac, configure.ac: web2c.ac => mktex.ac.
	* configure.ac: KPSE_WEB2C_PREPARE => KPSE_MKTEX_PREPARE.

2011-06-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tex-make.c [WIN32]: Do not #include <kpathsea/win32lib.h>
	from here (already done from config.h).

2011-06-28  Karl Berry  <karl@tug.org>

	* mktexlsr: need to shift when arg is not a directory.