@@ -23,6 +23,7 @@ extern KPSEDLL int is_cp932_system;
 extern KPSEDLL int isknj(int c);
 extern KPSEDLL int isknj2(int c);
 
+/* True if P points to a 2-Byte Kanji (CP 932, SJIS) code.  */
 #define IS_KANJI(p) is_cp932_system && isknj(*(p)) && isknj2(*(p+1))
 
 #endif /* not KPATHSEA_KNJ_H */
